--- a/index.html
+++ b/index.html
@@ -1,106 +1,85 @@
 <!DOCTYPE html>
-<html lang="ru" class="light">
+<html lang="ru" class="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Requesty.ai & Grok 3 Demo</title>
+    <title>Requesty.ai & Grok 3</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="bg-gray-50 dark:bg-gray-900 text-gray-800 dark:text-gray-100 font-sans transition-colors duration-300">
+<body class="bg-gray-900 text-white font-inter min-h-screen flex flex-col">
     <!-- Переключатель темы -->
-    <button id="theme-toggle" class="fixed top-4 right-4 p-2 rounded-full bg-gray-200 dark:bg-gray-700 text-gray-800 dark:text-gray-200 hover:bg-gray-300 dark:hover:bg-gray-600 transition">
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+    <button id="theme-toggle" class="fixed top-4 right-4 p-2 rounded-full bg-gray-800 hover:bg-gray-700 transition">
+        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />
         </svg>
     </button>
 
     <!-- Шапка -->
-    <header class="bg-gradient-to-r from-indigo-600 to-purple-600 text-white py-8 shadow-lg">
+    <header class="bg-gradient-to-r from-purple-900 to-blue-900 py-12">
         <div class="container mx-auto text-center">
-            <h1 class="text-5xl font-extrabold animate-fade-in">Requesty.ai & Grok 3 Demo</h1>
-            <p class="mt-3 text-xl animate-slide-up">Исследуйте мощь Grok 3 и DeepSearch с умной маршрутизацией</p>
+            <h1 class="text-5xl font-extrabold animate-fade-in">Requesty.ai & Grok 3</h1>
+            <p class="mt-4 text-xl animate-slide-up">Задавайте вопросы, исследуйте с DeepSearch</p>
         </div>
     </header>
 
     <!-- Основной контент -->
-    <main class="container mx-auto py-12 space-y-12">
-        <!-- Форма для кастомных моделей -->
-        <section class="bg-white dark:bg-gray-800 p-8 rounded-2xl shadow-xl backdrop-blur-md bg-opacity-80 dark:bg-opacity-80 animate-slide-up">
-            <h2 class="text-3xl font-bold mb-6">Добавить кастомную модель</h2>
-            <form id="custom-model-form" class="space-y-6">
-                <div>
-                    <label for="model-id" class="block text-lg font-medium mb-2">ID модели:</label>
-                    <input id="model-id" class="w-full p-4 border rounded-xl bg-gray-50 dark:bg-gray-700 border-gray-300 dark:border-gray-600 focus:ring-2 focus:ring-indigo-500" type="text" placeholder="например, custom/my-model" required>
-                </div>
-                <div>
-                    <label for="model-name" class="block text-lg font-medium mb-2">Название модели:</label>
-                    <input id="model-name" class="w-full p-4 border rounded-xl bg-gray-50 dark:bg-gray-700 border-gray-300 dark:border-gray-600 focus:ring-2 focus:ring-indigo-500" type="text" placeholder="например, Моя модель" required>
-                </div>
-                <div>
-                    <label for="model-provider" class="block text-lg font-medium mb-2">Провайдер:</label>
-                    <input id="model-provider" class="w-full p-4 border rounded-xl bg-gray-50 dark:bg-gray-700 border-gray-300 dark:border-gray-600 focus:ring-2 focus:ring-indigo-500" type="text" placeholder="например, Custom" required>
-                </div>
-                <button type="submit" class="bg-green-600 text-white py-3 px-6 rounded-xl hover:bg-green-700 transition transform hover:scale-105">Добавить модель</button>
-            </form>
-        </section>
-
-        <!-- Список кастомных моделей -->
-        <section id="custom-models-section" class="bg-white dark:bg-gray-800 p-8 rounded-2xl shadow-xl backdrop-blur-md bg-opacity-80 dark:bg-opacity-80 animate-slide-up"></section>
-
-        <!-- Форма для отправки запросов -->
-        <section class="bg-white dark:bg-gray-800 p-8 rounded-2xl shadow-xl backdrop-blur-md bg-opacity-80 dark:bg-opacity-80 animate-slide-up">
-            <h2 class="text-3xl font-bold mb-6">Отправить запрос к Grok 3</h2>
-            <form id="request-form" class="space-y-6">
-                <div>
-                    <label for="prompt" class="block text-lg font-medium mb-2">Ваш запрос:</label>
-                    <textarea id="prompt" class="w-full p-4 border rounded-xl bg-gray-50 dark:bg-gray-700 border-gray-300 dark:border-gray-600 focus:ring-2 focus:ring-indigo-500" rows="5" placeholder="Введите ваш запрос, например: 'Расскажи о космосе'" required></textarea>
-                </div>
-                <div>
-                    <label for="model" class="block text-lg font-medium mb-2">Выберите модель:</label>
-                    <select id="model" class="w-full p-4 border rounded-xl bg-gray-50 dark:bg-gray-700 border-gray-300 dark:border-gray-600 focus:ring-2 focus:ring-indigo-500"></select>
-                </div>
-                <div class="flex items-center space-x-4">
+    <main class="container mx-auto flex-grow py-12 space-y-12">
+        <!-- Форма запросов -->
+        <section class="max-w-3xl mx-auto">
+            <form id="request-form" class="relative">
+                <textarea id="prompt" class="w-full p-6 bg-gray-800 border border-gray-700 rounded-2xl focus:ring-2 focus:ring-purple-500 focus:border-transparent resize-none shadow-xl animate-slide-up" rows="4" placeholder="Что хотите узнать? Например: 'Объясни квантовую физику'"></textarea>
+                <div class="absolute bottom-4 right-4 flex items-center space-x-4">
                     <label class="flex items-center cursor-pointer">
                         <input id="deepsearch-toggle" type="checkbox" class="sr-only">
-                        <div class="w-12 h-6 bg-gray-300 dark:bg-gray-600 rounded-full p-1 duration-300">
-                            <div class="w-4 h-4 bg-white rounded-full transform transition-transform duration-300"></div>
+                        <div class="w-10 h-5 bg-gray-600 rounded-full p-1 duration-300">
+                            <div class="w-3 h-3 bg-white rounded-full transform transition-transform duration-300"></div>
                         </div>
-                        <span class="ml-3 text-lg font-medium">Включить DeepSearch</span>
+                        <span class="ml-2 text-sm">DeepSearch</span>
                     </label>
+                    <select id="model" class="bg-gray-800 border border-gray-700 rounded-xl p-2 text-sm focus:ring-2 focus:ring-purple-500"></select>
+                    <button type="submit" class="bg-purple-600 text-white p-3 rounded-xl hover:bg-purple-700 transition transform hover:scale-105">Отправить</button>
                 </div>
-                <button type="submit" class="bg-indigo-600 text-white py-3 px-6 rounded-xl hover:bg-indigo-700 transition transform hover:scale-105">Отправить</button>
             </form>
         </section>
 
-        <!-- Ответ от API -->
-        <section id="response-section" class="bg-white dark:bg-gray-800 p-8 rounded-2xl shadow-xl backdrop-blur-md bg-opacity-80 dark:bg-opacity-80 hidden animate-fade-in">
-            <h2 class="text-3xl font-bold mb-6">Ответ от Grok 3</h2>
-            <div id="response" class="text-gray-800 dark:text-gray-200 skeleton"></div>
+        <!-- Ответ -->
+        <section id="response-section" class="max-w-3xl mx-auto hidden">
+            <div id="response" class="p-6 bg-gray-800 bg-opacity-80 backdrop-blur-md rounded-2xl shadow-xl animate-fade-in skeleton"></div>
         </section>
 
-        <!-- История запросов -->
-        <section id="history-section" class="bg-white dark:bg-gray-800 p-8 rounded-2xl shadow-xl backdrop-blur-md bg-opacity-80 dark:bg-opacity-80 animate-slide-up"></section>
+        <!-- Кастомные модели -->
+        <section id="custom-models-section" class="max-w-3xl mx-auto"></section>
 
-        <!-- О сайте -->
-        <section class="bg-white dark:bg-gray-800 p-8 rounded-2xl shadow-xl backdrop-blur-md bg-opacity-80 dark:bg-opacity-80 animate-slide-up">
-            <h2 class="text-3xl font-bold mb-6">О Requesty.ai и Grok 3</h2>
-            <p class="text-lg text-gray-700 dark:text-gray-300 mb-4">
-                Этот сайт демонстрирует интеграцию <strong>Requesty.ai</strong> с <strong>Grok 3</strong> от xAI — мощной моделью ИИ, обеспечивающей продвинутое мышление и глубокое исследование через DeepSearch.
-            </p>
-            <ul class="list-disc pl-6 text-lg text-gray-700 dark:text-gray-300">
-                <li>Умная маршрутизация запросов к оптимальной модели через Requesty.ai.</li>
-                <li>DeepSearch от Grok 3 для синтеза данных из интернета и X.</li>
-                <li>Поддержка кастомных моделей и истории запросов.</li>
-                <li>Современный UI с анимациями и тёмной темой.</li>
-            </ul>
+        <!-- Форма кастомных моделей -->
+        <section class="max-w-3xl mx-auto">
+            <button id="toggle-custom-model-form" class="text-purple-400 hover:text-purple-300 transition">Добавить модель</button>
+            <form id="custom-model-form" class="hidden space-y-6 mt-4 p-6 bg-gray-800 bg-opacity-80 backdrop-blur-md rounded-2xl shadow-xl animate-slide-up">
+                <div>
+                    <label for="model-id" class="block text-sm mb-2">ID модели:</label>
+                    <input id="model-id" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-xl focus:ring-2 focus:ring-purple-500" type="text" placeholder="например, custom/my-model" required>
+                </div>
+                <div>
+                    <label for="model-name" class="block text-sm mb-2">Название:</label>
+                    <input id="model-name" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-xl focus:ring-2 focus:ring-purple-500" type="text" placeholder="например, Моя модель" required>
+                </div>
+                <div>
+                    <label for="model-provider" class="block text-sm mb-2">Провайдер:</label>
+                    <input id="model-provider" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-xl focus:ring-2 focus:ring-purple-500" type="text" placeholder="например, Custom" required>
+                </div>
+                <button type="submit" class="bg-purple-600 text-white p-3 rounded-xl hover:bg-purple-700 transition transform hover:scale-105">Добавить</button>
+            </form>
         </section>
+
+        <!-- История -->
+        <section id="history-section" class="max-w-3xl mx-auto"></section>
     </main>
 
     <!-- Футер -->
-    <footer class="bg-gradient-to-r from-gray-800 to-gray-900 text-white py-8">
-        <div class="container mx-auto text-center">
-            <p class="text-lg">© 2025 Requesty.ai & Grok 3 Demo. Хостинг на GitHub Pages.</p>
+    <footer class="bg-gray-950 py-8">
+        <div class="container mx-auto text-center text-gray-400">
+            <p>© 2025 Requesty.ai & Grok 3. Powered by xAI.</p>
         </div>
     </footer>
 
