--- a/index.html
+++ b/index.html
@@ -1,88 +1,162 @@
-<!DOCTYPE html>
-<html lang="ru" class="dark">
+<!DOCTYPE html><html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Requesty.ai & Grok 3</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AI Chat</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: sans-serif;
+      background-color: #111;
+      color: white;
+    }
+    header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 1rem;
+      background-color: #222;
+    }
+    .title {
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
+    .chat-container {
+      padding: 2rem;
+    }
+    .greeting {
+      font-size: 1.3rem;
+      margin-bottom: 1rem;
+    }
+    .options button {
+      background: #333;
+      border: none;
+      padding: 0.8rem 1.2rem;
+      margin: 0.3rem;
+      border-radius: 0.5rem;
+      color: white;
+      cursor: pointer;
+    }
+    .chat-log {
+      margin-top: 1rem;
+      max-height: 400px;
+      overflow-y: auto;
+    }
+    .chat-message {
+      margin: 0.5rem 0;
+    }
+    .chat-message.user {
+      text-align: right;
+      color: #0f0;
+    }
+    .chat-message.ai {
+      text-align: left;
+      color: #0ff;
+    }
+    .chat-box {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background: #222;
+      padding: 1rem;
+      display: flex;
+      gap: 0.5rem;
+    }
+    .chat-box input {
+      flex: 1;
+      padding: 0.8rem;
+      border-radius: 0.5rem;
+      border: none;
+      outline: none;
+    }
+    .chat-box button {
+      padding: 0.8rem 1.2rem;
+      border: none;
+      background: #444;
+      color: white;
+      border-radius: 0.5rem;
+      cursor: pointer;
+    }
+    select {
+      background-color: #333;
+      color: white;
+      border: none;
+      padding: 0.5rem;
+      border-radius: 0.5rem;
+    }
+  </style>
 </head>
-<body class="bg-gray-900 text-white font-inter min-h-screen flex flex-col">
-    <!-- Переключатель темы -->
-    <button id="theme-toggle" class="fixed top-4 right-4 p-2 rounded-full bg-gray-800 hover:bg-gray-700 transition">
-        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />
-        </svg>
-    </button>
+<body>
+  <header>
+    <div class="title">AI Chat</div>
+    <select id="model">
+      <option value="openai/gpt-4o">GPT-4o</option>
+      <option value="grok-3">Grok-3</option>
+      <option value="grok-3-mini">Grok-3 Mini</option>
+    </select>
+  </header>
+  <div class="chat-container">
+    <div class="greeting">Good morning, Gl1ch.<br>How can I help you today?</div>
+    <div class="options">
+      <button onclick="sendPreset('Do some research')">Research</button>
+      <button onclick="sendPreset('Create an image')">Create images</button>
+      <button onclick="sendPreset('How to...')">How to</button>
+      <button onclick="sendPreset('Analyze this')">Analyze</button>
+      <button onclick="sendPreset('Act like a persona')">Personas</button>
+    </div>
+    <div class="chat-log" id="chat-log"></div>
+  </div>
+  <div class="chat-box">
+    <input type="text" id="user-input" placeholder="What do you want to know?">
+    <button onclick="sendMessage()">Send</button>
+  </div><script>
+const apiKey = "sk-oWHssHofTC2g291Qu6wY/EkYrwQEBjxay1XR1lMg3YD7dP2ci4pQBm3SP3VVv+r7o8ksDq2HdQELruTSmkTtzjiEUX+ysYtiLVbPULHp2gw=";
+const chatLog = document.getElementById("chat-log");
+const userInput = document.getElementById("user-input");
+const modelSelect = document.getElementById("model");
 
-    <!-- Шапка -->
-    <header class="bg-gradient-to-r from-purple-900 to-blue-900 py-12">
-        <div class="container mx-auto text-center">
-            <h1 class="text-5xl font-extrabold animate-fade-in">Requesty.ai & Grok 3</h1>
-            <p class="mt-4 text-xl animate-slide-up">Задавайте вопросы, исследуйте с DeepSearch</p>
-        </div>
-    </header>
+function appendMessage(role, content) {
+  const message = document.createElement("div");
+  message.className = `chat-message ${role}`;
+  message.textContent = content;
+  chatLog.appendChild(message);
+  chatLog.scrollTop = chatLog.scrollHeight;
+}
 
-    <!-- Основной контент -->
-    <main class="container mx-auto flex-grow py-12 space-y-12">
-        <!-- Форма запросов -->
-        <section class="max-w-3xl mx-auto">
-            <form id="request-form" class="relative">
-                <textarea id="prompt" class="w-full p-6 bg-gray-800 border border-gray-700 rounded-2xl focus:ring-2 focus:ring-purple-500 focus:border-transparent resize-none shadow-xl animate-slide-up" rows="4" placeholder="Что хотите узнать? Например: 'Объясни квантовую физику'"></textarea>
-                <div class="absolute bottom-4 right-4 flex items-center space-x-4">
-                    <label class="flex items-center cursor-pointer">
-                        <input id="deepsearch-toggle" type="checkbox" class="sr-only">
-                        <div class="w-10 h-5 bg-gray-600 rounded-full p-1 duration-300">
-                            <div class="w-3 h-3 bg-white rounded-full transform transition-transform duration-300"></div>
-                        </div>
-                        <span class="ml-2 text-sm">DeepSearch</span>
-                    </label>
-                    <select id="model" class="bg-gray-800 border border-gray-700 rounded-xl p-2 text-sm focus:ring-2 focus:ring-purple-500"></select>
-                    <button type="submit" class="bg-purple-600 text-white p-3 rounded-xl hover:bg-purple-700 transition transform hover:scale-105">Отправить</button>
-                </div>
-            </form>
-        </section>
+function sendPreset(text) {
+  userInput.value = text;
+  sendMessage();
+}
 
-        <!-- Ответ -->
-        <section id="response-section" class="max-w-3xl mx-auto hidden">
-            <div id="response" class="p-6 bg-gray-800 bg-opacity-80 backdrop-blur-md rounded-2xl shadow-xl animate-fade-in skeleton"></div>
-        </section>
+async function sendMessage() {
+  const userText = userInput.value.trim();
+  if (!userText) return;
+  appendMessage("user", userText);
+  userInput.value = "";
+  const model = modelSelect.value;
 
-        <!-- Кастомные модели -->
-        <section id="custom-models-section" class="max-w-3xl mx-auto"></section>
+  try {
+    const response = await fetch("https://router.requesty.ai/v1/chat/completions", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+        "Authorization": `Bearer ${apiKey}`
+      },
+      body: JSON.stringify({
+        model: model,
+        messages: [{ role: "user", content: userText }]
+      })
+    });
 
-        <!-- Форма кастомных моделей -->
-        <section class="max-w-3xl mx-auto">
-            <button id="toggle-custom-model-form" class="text-purple-400 hover:text-purple-300 transition">Добавить модель</button>
-            <form id="custom-model-form" class="hidden space-y-6 mt-4 p-6 bg-gray-800 bg-opacity-80 backdrop-blur-md rounded-2xl shadow-xl animate-slide-up">
-                <div>
-                    <label for="model-id" class="block text-sm mb-2">ID модели:</label>
-                    <input id="model-id" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-xl focus:ring-2 focus:ring-purple-500" type="text" placeholder="например, custom/my-model" required>
-                </div>
-                <div>
-                    <label for="model-name" class="block text-sm mb-2">Название:</label>
-                    <input id="model-name" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-xl focus:ring-2 focus:ring-purple-500" type="text" placeholder="например, Моя модель" required>
-                </div>
-                <div>
-                    <label for="model-provider" class="block text-sm mb-2">Провайдер:</label>
-                    <input id="model-provider" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-xl focus:ring-2 focus:ring-purple-500" type="text" placeholder="например, Custom" required>
-                </div>
-                <button type="submit" class="bg-purple-600 text-white p-3 rounded-xl hover:bg-purple-700 transition transform hover:scale-105">Добавить</button>
-            </form>
-        </section>
-
-        <!-- История -->
-        <section id="history-section" class="max-w-3xl mx-auto"></section>
-    </main>
-
-    <!-- Футер -->
-    <footer class="bg-gray-950 py-8">
-        <div class="container mx-auto text-center text-gray-400">
-            <p>© 2025 Requesty.ai & Grok 3. Powered by xAI.</p>
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
-</body>
+    const data = await response.json();
+    if (data.choices && data.choices.length > 0) {
+      appendMessage("ai", data.choices[0].message.content);
+    } else {
+      appendMessage("ai", "[No response received]");
+    }
+  } catch (error) {
+    appendMessage("ai", `[Error] ${error.message}`);
+  }
+}
+</script></body>
 </html>
